[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Buttons/barHorizontal_green.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayScene/HeathBar.gd" type="Script" id=2]
[ext_resource path="res://Resources/Buttons/barHorizontal_white.png" type="Texture" id=3]
[ext_resource path="res://Resources/Themes/Dimbo Regular24.tres" type="DynamicFont" id=4]
[ext_resource path="res://Resources/Sprites/Ninja/wizard_life.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/Enemy/enemy_life.png" type="Texture" id=6]

[node name="Node" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 31.3687
margin_top = 2.00225
margin_right = 231.369
margin_bottom = 28.0023
max_value = 1000.0
value = 1000.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthValue" type="Label" parent="."]
margin_left = 106.0
margin_top = -2.0
margin_right = 150.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.529412, 0.258824, 0.0627451, 1 )
text = "1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 22.4377, 18.9939 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 230.252, 19.5424 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 6 )
flip_h = true
